// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: create 1`] = `
<AlmBindingDefinitionFormRenderer
  alm="github"
  alreadyHaveInstanceConfigured={false}
  canSubmit={false}
  formData={
    Object {
      "appId": "",
      "clientId": "",
      "clientSecret": "",
      "key": "",
      "privateKey": "",
      "url": "",
    }
  }
  isUpdate={false}
  onBitbucketVariantChange={[Function]}
  onCancel={[Function]}
  onFieldChange={[Function]}
  onSubmit={[Function]}
  submitting={false}
/>
`;

exports[`should render correctly: edit 1`] = `
<AlmBindingDefinitionFormRenderer
  alm="github"
  alreadyHaveInstanceConfigured={false}
  canSubmit={false}
  formData={
    Object {
      "appId": "123456",
      "clientId": "client1",
      "clientSecret": "**clientsecret**",
      "key": "key",
      "privateKey": "asdf1234",
      "url": "http://github.enterprise.com",
    }
  }
  isUpdate={true}
  onBitbucketVariantChange={[Function]}
  onCancel={[Function]}
  onFieldChange={[Function]}
  onSubmit={[Function]}
  submitting={false}
/>
`;
